# ai-translator-fi-to-en

./: .gitignore  LICENSE  README.md  pyproject.toml
originals/: README.md
translations/: README.md
